# expense-tracker

./: auth.py  database.db  database_backup_1752161402.db  dev_tools.py  main.py  models.py  pyproject.toml  reset_database.py  schemas.py  setup.sh  start_server.py  upload_processor.py
backend/: __init__.py  auth.py  category_bootstrap.py  database.db  dependencies.py  duplicate_detector.py  main.py  ml_categorizer.py  models.py  schemas.py  upload_processor.py  websocket_manager.py
backend/__pycache__/: auth.py  main.py  upload_processor.py
backend/__pycache__/routers/: __init__.py
backend/routers/: categorization.py  duplicates.py  transactions.py  upload.py
backend/tests/: conftest.py  test_main.py
expense_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html
frontend/components/: duplicates-tab.html  staged-tab.html  transactions-tab.html
frontend/css/: styles.css
frontend/js/: app.js  auth.js  pagination.js  transactions.js  uploads.js
routers/: __init__.py  upload.py
scripts/: debug_imports.py
static/: index.html
static/css/: styles.css
static/js/: app.js  auth.js  duplicates.js  uploads.js
