[project]
name = "expense-tracker"
version = "0.1.0"
description = "Personal expense tracking application with FastAPI backend and file upload support"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Expense Tracker Team", email = "team@example.com"},
]

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.41",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.0.0,<4.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.7",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pytest>=8.4.1",
    "httpx>=0.27.2",
    "websockets>=12.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["frontend*", "tests*", "scripts*"]

[tool.setuptools.package-data]
backend = ["*.json", "*.sql"]