[project]
name = "expense-tracker"
version = "3.0.0"
description = "Smart expense tracker with ML-powered categorization"
dependencies = [
    # Existing FastAPI dependencies
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # NEW: ML and Data Processing dependencies
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    # NEW: Text processing and fuzzy matching
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.20.0",
    # NEW: Enhanced file processing
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "chardet>=5.0.0",
    # NEW: Additional utilities
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    # Production deployment
    "gunicorn>=21.0.0",
    "bcrypt>=4.0.0",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "backend/",
    "frontend/",
]
